add new destinations

--- a/css/app.css
+++ b/css/app.css
@@ -55,6 +55,18 @@ h2 {
     background-color: #4dd0e1;
 }
 
-#barcelona {
+#vacaville {
+    background-color: #32CD32;
+}
+
+#saopaulo {
     background-color: #800000;
+}
+
+#scotland {
+    background-color: #FFFF00;
+}
+
+#paris {
+    background-color: #335522;
 }
